# espressif_rtos_demo

./: .cproject  .gitignore  .project  CMakeLists.txt  readme.txt  sdkconfig
Core/: main.c  main.h
Core/Rtos/: freertos.c  freertos.h
Core/System/: utils.c  utils.h
Doc/Parts/Waveshare/: readme.txt
Doc/Web/: Repo - espressif_rtos_demo - ErisdarDemo.url
Middlewares/FreeRTOS/Source/CMSIS_RTOS_V2/: cmsis_os.h
main/: CMakeLists.txt
